Fixed sidebar with overflow

--- a/css/style.css
+++ b/css/style.css
@@ -29,12 +29,27 @@ body {
 #sidebar {
     width: 200px;
     background-color: #000000;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 #content {
     width: calc(100vw - 200px);
     background-color: #151921;
     overflow-y: auto;
+}
+
+.top-sidebar {
+    height: 300px;
+    width: 100%;
+    background-color: #000000;
+}
+
+.bottom-sidebar {
+    height: 75px;
+    width: 100%;
+    background-color: pink;
 }
 
 .main-content {
@@ -163,6 +178,11 @@ header {
 .txt-name-playlist:hover {
     opacity: 1;
     font-weight: 800;
+}
+
+.playlist-list {
+    height: 30vh;
+    overflow-y: auto;
 }
 
 
